<resources>
    <string name="app_name">PlayPalAssignment</string>
    <string name="title_activity_main">MainActivity</string>

    <!-- tactical board UI -->
    <string name="tactical_header">HEADER</string>
    <string name="tactical_info">INFO</string>
    <string name="tactical_players">PLAYERS</string>

    <!-- player list UI -->
    <string name="player_players">PLAYERS</string>

    <!-- navigation drawer -->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!-- app bar icon action string -->
    <string name="action_friends">Friends</string>
    <string name="action_mail">Mail</string>
    <string name="action_books">Books</string>
    <string name="title_activity_player_list">PlayerListActivity</string>
    <string name="action_settings">Settings</string>

    <!-- bundle key -->
    <string name="bundle_team_name">bundle_teamname</string>
    <string name="bundle_players_id">bundle_playersid</string>
    <string name="bundle_players_name">bundle_playersname</string>
    <string name="bundle_jersey_number">bundle_jerseynumber</string>
    <string name="bundle_field_position">bundle_fieldposition</string>
    <string name="bundle_team">bundle_team</string>
    <string name="bundle_player_selected_position">bundle_playerselectedposition</string>
    <string name="bundle_is_editing">bundle_isediting</string>

    <!-- clipdata label type -->
    <string name="from_tactical">fromtactical</string>
    <string name="from_player">fromplayer</string>

</resources>
